--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "homepage": "https://ctcuff.github.io/ctcuff.github.io",
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "latest",
+    "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-bootstrap": "latest",
     "react-scroll": "latest"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/jest": "^24.0.14"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "npm run compile-sass && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "compile-sass": "node scripts/compile-sass.js",
-    "remove-css": "rm src/styles/*.css && rm src/styles/*.map",
+    "remove-css": "rm src/styles/*.css",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -b master"
   },
