--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "react-scroll": "latest"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.14"
+    "@types/jest": "^24.0.14",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run compile-sass && react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "compile-sass": "node scripts/compile-sass.js",
-    "remove-css": "rm src/styles/*.css",
+    "remove-css": "rm src/styles/*.css && rm src/styles/*.map",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build -b master"
   },
