--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "homepage": "https://ctcuff.github.io/ctcuff.github.io",
   "dependencies": {
+    "@types/node": "12.0.10",
+    "@types/react": "16.8.22",
+    "@types/react-dom": "16.8.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "latest",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-scroll": "latest"
+    "react-scroll": "latest",
+    "typescript": "3.5.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.14",
+    "@types/react-bootstrap": "^0.32.17",
+    "@types/react-scroll": "^1.5.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0"
   },
