--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "gsap": "^2.1.3",
+    "vanilla-tilt": "^1.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2"
   },
