--- a/package.json
+++ b/package.json
@@ -1,42 +1,59 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://ctcuff.github.io/ctcuff.github.io",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "serve-production": "serve -d dist",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "deploy": "gh-pages -d dist -b master"
-  },
-  "dependencies": {
-    "core-js": "^2.6.5",
-    "gsap": "^2.1.3",
-    "vanilla-tilt": "^1.7.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-eslint": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.4.1"
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+    "name": "portfolio",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "https://ctcuff.github.io/ctcuff.github.io",
+    "scripts": {
+        "dev": "vue-cli-service serve --port 3000",
+        "serve-production": "serve -d dist",
+        "build": "vue-cli-service build",
+        "deploy": "gh-pages -d dist -b master",
+        "lint": "eslint './src/**/*{.js,.vue}'",
+        "format": "yarn format:vue && yarn format:scss",
+        "format:vue": "prettier --write './src/**/*{.js,.vue}'",
+        "format:scss": "prettier --write './src/**/*.scss'"
+    },
+    "dependencies": {
+        "core-js": "^2.6.5",
+        "gsap": "^3.3.4",
+        "paper": "^0.12.11",
+        "splitting": "^1.0.6",
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.2"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "^3.10.0",
+        "@vue/cli-plugin-eslint": "^3.10.0",
+        "@vue/cli-service": "^3.10.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^5.16.0",
+        "eslint-plugin-vue": "^5.0.0",
+        "gh-pages": "^2.1.1",
+        "husky": "^4.2.5",
+        "lint-staged": "^10.2.11",
+        "node-sass": "^4.12.0",
+        "prettier": "^2.0.5",
+        "sass-loader": "^7.2.0",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "./src/**/*{.js,.vue}": [
+            "yarn format",
+            "yarn lint"
+        ]
+    },
+    "postcss": {
+        "plugins": {
+            "autoprefixer": {}
+        }
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions"
+    ]
 }
