--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "core-js": "^2.6.5",
         "gsap": "^3.3.4",
+        "locomotive-scroll": "^3.5.4",
         "paper": "^0.12.11",
         "splitting": "^1.0.6",
         "vue": "^2.6.10",
