--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.2",
-    "node-sass": "4.12.0",
     "prettier": "^2.4.1",
+    "sass": "^1.44.0",
     "sass-loader": "7.2.0",
     "vue-template-compiler": "^2.6.14"
   },
