--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://ctcuff.github.io/ctcuff.github.io",
   "scripts": {
-    "dev": "vue-cli-service serve --port 3000",
     "build": "vue-cli-service build",
+    "lint": "eslint \"./src/**/*{.js,.vue}\"",
     "deploy": "yarn build && gh-pages -d dist -b master",
-    "lint": "eslint './src/**/*{.js,.vue}'",
+    "dev": "vue-cli-service serve --port 3000",
     "format": "yarn format:vue && yarn format:scss",
-    "format:vue": "prettier --write './src/**/*{.js,.vue}'",
-    "format:scss": "prettier --write './src/**/*.scss'",
+    "format:scss": "prettier --write \"./src/**/*.scss\"",
+    "format:vue": "prettier --write \"./src/**/*{.js,.vue}\"",
     "precommit": "lint-staged",
     "prepare": "husky install"
   },
@@ -18,12 +18,19 @@
     "core-js": "^3.18.2",
     "gsap": "^3.8.0",
     "vue": "^2.6.14",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.2"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "^4.5.13",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "7.32.0",
     "eslint-plugin-vue": "^7.19.1",
@@ -33,8 +40,18 @@
     "prettier": "^2.4.1",
     "sass": "^1.44.0",
     "sass-loader": "7.2.0",
+    "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.14"
   },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -47,14 +64,5 @@
     "./src/**/*{.scss,.js,.vue}": [
       "yarn format"
     ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  }
 }
