--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,12 +13,10 @@
       "rules": {
         "semi": ["error", "never"],
         "no-console": "warn",
-        "no-unused-vars": [
-          "error",
-          {
-            "args": "after-used"
-          }
-        ],
+        // Disabled to let TypeScript handle unused variable checking.
+        // Otherwise, ESLint would report unused variables in a type's
+        // function callback declaration
+        "no-unused-vars": "off",
         "no-mixed-spaces-and-tabs": "error",
         "no-trailing-spaces": "error",
         "no-var": "error",
@@ -27,7 +25,8 @@
         "no-prototype-builtins": "off",
         "comma-dangle": ["error", "never"],
         "arrow-parens": ["error", "as-needed"],
-        "@typescript-eslint/no-use-before-define": ["error"]
+        "@typescript-eslint/no-use-before-define": ["error"],
+        "@typescript-eslint/no-unused-vars": ["error", { "args": "after-used" }]
       }
     }
   ]
