--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
@@ -41,7 +42,9 @@
     "sass": "^1.44.0",
     "sass-loader": "7.2.0",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^2.0.0"
   },
   "postcss": {
     "plugins": {
