--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "core-js": "^3.18.2",
     "gsap": "^3.8.0",
+    "scrollmagic": "^2.0.8",
+    "smooth-scrollbar": "^8.7.0",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
+    "@types/scrollmagic": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "^4.5.13",
