--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
         "gh-pages": "^2.1.1",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.11",
-        "node-sass": "^4.12.0",
         "prettier": "^2.0.5",
+        "sass": "^1.66.1",
         "sass-loader": "^7.2.0",
         "vue-template-compiler": "^2.6.10"
     },
