--- a/package.json
+++ b/package.json
@@ -1,61 +1,69 @@
 {
-    "name": "portfolio",
-    "version": "0.1.0",
-    "private": true,
-    "homepage": "https://ctcuff.github.io/ctcuff.github.io",
-    "scripts": {
-        "dev": "vue-cli-service serve --port 3000",
-        "build": "vue-cli-service build",
-        "deploy": "yarn build && gh-pages -d dist -b master",
-        "lint": "eslint './src/**/*{.js,.vue}'",
-        "format": "yarn format:vue && yarn format:scss",
-        "format:vue": "prettier --write './src/**/*{.js,.vue}'",
-        "format:scss": "prettier --write './src/**/*.scss'"
-    },
-    "dependencies": {
-        "core-js": "^2.6.5",
-        "gsap": "^3.3.4",
-        "intersection-observer": "^0.11.0",
-        "smooth-scrollbar": "^8.8.4",
-        "splitting": "^1.0.6",
-        "vue": "^2.6.10",
-        "vue-router": "^3.1.2"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^3.10.0",
-        "@vue/cli-plugin-eslint": "^3.10.0",
-        "@vue/cli-service": "^3.10.0",
-        "babel-eslint": "^10.0.1",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "gh-pages": "^2.1.1",
-        "husky": "^4.2.5",
-        "lint-staged": "^10.2.11",
-        "prettier": "^2.0.5",
-        "sass": "^1.66.1",
-        "sass-loader": "^7.2.0",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged"
-        }
-    },
-    "lint-staged": {
-        "./src/**/*{.js,.vue}": [
-            "yarn lint"
-        ],
-        "./src/**/*{.scss,.js,.vue}": [
-            "yarn format"
-        ]
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
-        }
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions"
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "build": "vue-cli-service build",
+    "lint": "eslint './src/**/*{.js,.ts,.vue}'",
+    "deploy": "yarn build && gh-pages -d dist -b master",
+    "dev": "vue-cli-service serve --port 3000",
+    "format": "yarn format:vue && yarn format:scss",
+    "format:scss": "prettier --write './src/**/*.scss'",
+    "format:vue": "prettier --write './src/**/*{.js,.ts,.vue}'"
+  },
+  "dependencies": {
+    "core-js": "^2.6.5",
+    "gsap": "^3.3.4",
+    "intersection-observer": "^0.11.0",
+    "smooth-scrollbar": "^8.8.4",
+    "splitting": "^1.0.6",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.1.2"
+  },
+  "devDependencies": {
+    "@types/gsap": "^3.0.0",
+    "@types/splitting": "^1.0.5",
+    "@typescript-eslint/parser": "^4.18.0",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-typescript": "~4.5.13",
+    "@vue/cli-service": "^3.10.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "gh-pages": "^2.1.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "sass": "^1.66.1",
+    "sass-loader": "^7.2.0",
+    "typescript": "~4.1.5",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
+  "homepage": "https://ctcuff.github.io/ctcuff.github.io",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src/**/*{.js,.ts,.vue}": [
+      "yarn lint"
+    ],
+    "./src/**/*{.scss,.js,.ts,.vue}": [
+      "yarn format"
     ]
+  }
 }
