--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "dev": "vue-cli-service serve --port 3000",
     "format": "yarn format:vue && yarn format:scss",
     "format:scss": "prettier --write './src/**/*.scss'",
-    "format:vue": "prettier --write './src/**/*{.js,.ts,.vue}'"
+    "format:vue": "prettier --write './src/**/*{.js,.ts,.vue}'",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "gsap": "^3.3.4",
     "intersection-observer": "^0.11.0",
-    "smooth-scrollbar": "^8.8.4",
+    "simplebar": "^6.2.5",
     "splitting": "^1.0.6",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.6",
@@ -35,8 +36,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "gh-pages": "^2.1.1",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.2",
     "prettier": "^2.0.5",
     "sass": "^1.66.1",
     "sass-loader": "^7.2.0",
@@ -59,11 +60,7 @@
     }
   },
   "lint-staged": {
-    "./src/**/*{.js,.ts,.vue}": [
-      "yarn lint"
-    ],
-    "./src/**/*{.scss,.js,.ts,.vue}": [
-      "yarn format"
-    ]
+    "./src/**/*{.js,.ts,.vue}": "yarn lint",
+    "./src/**/*{.scss,.js,.ts,.vue}": "yarn format"
   }
 }
