--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@types/gsap": "^3.0.0",
     "@types/splitting": "^1.0.5",
     "@typescript-eslint/parser": "^4.18.0",
